Documentation/logic-rule-ebnf.txt
LogicRules      ::= LogicRule ( NEW_LINE+ LogicRule )*
LogicRule       ::= Expr '->' Conclusions ( '{' CertaintyFactor '}' )?
Expr            ::= Term ( '|' Term )*
Term            ::= Factor ( '&' Factor )*
Factor          ::= Fact | '(' Expr ')'
Conclusions     ::= Fact ( '&' Fact )*
Fact            ::= ScalarFact | IndividualFact
ScalarFact      ::= '"' Name '"' '=' '"' Value '"'
IndividualFact  ::= ClassName '=' IndividualName
CertaintyFactor ::= NUMBERIC
Name            ::= UNQUOTED_STRING
Value           ::= UNQUOTED_STRING
ClassName       ::= IDENT
IndividualName  ::= IDENT
